0.8.16
------
  * Enhance "kdumptool calibrate" output
  * Install systemd unit file
  * Drop dependency on libssh2 (use system ssh binary for SFTP)
  * IPv6 modes for KDUMP_NETCONFIG
  * Honour KDUMP_IMMEDIATE_REBOOT with fadump
  * KDUMP_FADUMP_SHELL option to allow debugging of fadump
  * Support for dracut's systemd module
  * Override kdump device systemd job timeout (using rd.timeout)
  * Take framebuffer size into account for calibrate
  * Take constant-size slabs (ACPI and ftrace) into account for calibrate
  * Bugfix: use device from /etc/fstab to mount / and /boot
  * Bugfix: use proper regexp in multipath.conf

0.8.15
------
  * Disable memory cgroup in kdump kernel
  * Limit the number of CPUs on all architectures
  * Increase udevd memory requirements
  * If possible, use wicked to determine network mode
  * Take number of possible CPUs into account for calibrate

0.8.14
------
  * Disable ACPI memory hotplug in kdump kernel
  * Update kernel and initrd estimates
  * Bugfix: install mount-kdump.sh to dracut module directory

0.8.13
------
  * Store current configuration if KDUMP_NETCONFIG is static
  * Modify kdump udev rules to work with systemd (and clean them up)
  * Support percent-encoded URLs for KDUMP_SAVEDIR

0.8.12
------
  * Add "ssh" target protocol to transfer the file over the standard input
    to a remote host using the standard ssh client
  * Prevent double mount of the root file system
  * Allow taking remote dumps without mounting any file systems

0.8.11
------
  * Use fast xz compression with dracut
  * Mount boot/root partition only if needed

0.8.10
------
  * Support snappy compression algorithm
  * Improved algorithm for "calibrate"
  * Network support for dracut
  * Filter out DomU pages, when dumping a Xen virtualization host
  * Do not try to copy separate debuginfo files
  * Unit test for FilePath::listDir()
  * delete_dumps: ignore non-kdump directories

0.8.9
-----
  * Fixed dracut hook install