@@ -34,6 +34,7 @@ DEFINE_OPT(KDUMP_POSTSCRIPT, String, "", DUMP)
 DEFINE_OPT(KDUMP_COPY_KERNEL, Bool, "", DUMP)
 DEFINE_OPT(KDUMPTOOL_FLAGS, String, "", DUMP)
 DEFINE_OPT(KDUMP_NETCONFIG, String, "auto", MKINITRD)
+DEFINE_OPT(KDUMP_NET_TIMEOUT, Int, 30, DUMP)
 DEFINE_OPT(KDUMP_SMTP_SERVER, String, "", DUMP)
 DEFINE_OPT(KDUMP_SMTP_USER, String, "", DUMP)
 DEFINE_OPT(KDUMP_SMTP_PASSWORD, String, "", DUMP)
